Apply API Council filter.
Change-Id: I2d6a25dfe6690a47a2bc48b8195f29990b08ff36
BUG: 32916152

--- a/project.config
+++ b/project.config
@@ -16,4 +16,4 @@
 	label-Verified = -1..+1 group Android Maintainers
 	submit = group Android Maintainers
 [access]
-	inheritFrom = Platform-Projects
+	inheritFrom = api_council_filter
